content-management-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-management-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: content-management-service
  template:
    metadata:
      labels:
        app: content-management-service
    spec:
      containers:
        - name: content-management-service
          image: disertation.azurecr.io/contentmanagementservice-api:latest
          ports:
            - containerPort: 80
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: content-management-service
spec:
  type: LoadBalancer
  selector:
    app: content-management-service
  ports:
    - name: http
      port: 80
      targetPort: 80
