kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-broker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-broker
  template:
    metadata:
      labels:
        app: kafka-broker
    spec:
      hostname: kafka-broker
      containers:
        - name: kafka-broker
          image: disertation.azurecr.io/confluentinc/cp-kafka:7.6.1
          ports:
            - containerPort: 29092
              name: kafka
            - containerPort: 29093
              name: controller
            - containerPort: 9092
              name: plaintext-host
            - containerPort: 9101
              name: jmx
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-broker
spec:
  selector:
    app: kafka-broker
  ports:
    - port: 29092
      targetPort: 29092
      name: kafka
    - port: 29093
      targetPort: 29093
      name: controller
    - port: 9092
      targetPort: 9092
      name: plaintext-host
    - port: 9101
      targetPort: 9101
      name: jmx
