main-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-app
  template:
    metadata:
      labels:
        app: main-app
    spec:
      containers:
        - name: main-app
          image: disertation.azurecr.io/main-app:latest
          ports:
            - containerPort: 80
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: main-app
spec:
  type: LoadBalancer
  selector:
    app: main-app
  ports:
    - name: http
      port: 80
      targetPort: 80
