recommendation-management-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendation-management-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendation-management-service
  template:
    metadata:
      labels:
        app: recommendation-management-service
    spec:
      containers:
        - name: recommendation-management-service
          image: disertation.azurecr.io/recommendationmanagementservice-workerservice:latest
          ports:
            - containerPort: 82
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: recommendation-management-service
spec:
  selector:
    app: recommendation-management-service
  ports:
    - name: http
      port: 82
      targetPort: 82
